work with card and vission future

--- a/index.html
+++ b/index.html
@@ -5,14 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Bangladesh</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
-
+        <section class="banner-section">
+            <div class="banner-container">
+                <div class="banner-info">
+                    <h4>Bangladesh 2.0</h4>
+                    <h1>Idea , innovation ,<br>
+                        vision and challenges <br> in New Bangladesh.</h1>
+                    <button class="btn-primary">Explorer New Bangladesh</button>
+                </div>
+                <img src="images/assets/hero.png" alt="" srcset="">
+            </div>
+        </section>
     </header>
     <main>
-
+        <section>
+            <div class="vission-future-container">
+                <div class="vission-future-info">
+                    <h2 class="title">The Vision of Future</h2>
+                    <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                        cutting-edge technology,
+                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                        digital transformation, and robust infrastructure,
+                        the country is set to become a global model of development.</p>
+                </div>
+                <div class="vission-future-card">
+                    <div class="card-container">
+                        <div class="card c1">
+                            <img src="images/assets/cardicon.png" alt="" srcset="">
+                            <h4>Digital Transformation</h4>
+                            <p class="color-primay">Creating a nationwide digital ecosystem to enhance connectivity and
+                                access
+                                to services for
+                                all citizens.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <div class="card c2">
+                            <img src="images/assets/cardicon.png" alt="" srcset="">
+                            <h4>Digital Transformation</h4>
+                            <p class="color-primay">Creating a nationwide digital ecosystem to enhance connectivity and
+                                access
+                                to services for
+                                all citizens.</p>
+                            <button>Learn More</button>
+                        </div>
+                        <div class="card c3">
+                            <img src="images/assets/cardicon.png" alt="" srcset="">
+                            <h4>Digital Transformation</h4>
+                            <p class="color-primay">Creating a nationwide digital ecosystem to enhance connectivity and
+                                access
+                                to services for
+                                all citizens.</p>
+                            <button>Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
