work with news section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,62 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="recent-news-container">
+                <div class="recent-news-info">
+                    <h2 class="title">Recent News</h2>
+                    <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                        cutting-edge technology,
+                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                        digital transformation, and robust infrastructure,
+                        the country is set to become a global model of development.</p>
+
+                </div>
+                <div class="recent-news-card-container">
+                    <div class="card-news">
+                        <div class="card-imgsat-container">
+                            <img src="images/assets/satelite.png" alt="">
+                        </div>
+                        <div class="card-news-info">
+                            <h3>Bangladesh Launches New Satellite</h3>
+                            <img src="images/assets/aljazeera.png" alt="">
+                            <div class="date-time-con">
+                                <p>Date: 05/01/25</p>
+                                <p>Time: 10.25 PM</p>
+                            </div>
+                            <p class="color-primay">Not until the creation and maintenance of decent conditions of life
+                                for all people are
+                                recognized and accepted as a common obligation of all people and all countries—not until
+                                then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="news-btn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="recent-news-card-container">
+                    <div class="card-news-rev">
+                        <div class="card-imgsat-container">
+                            <img src="images/assets/satelite.png" alt="">
+                        </div>
+                        <div class="card-news-info">
+                            <h3>Bangladesh Launches New Satellite</h3>
+                            <img src="images/assets/aljazeera.png" alt="">
+                            <div class="date-time-con">
+                                <p>Date: 05/01/25</p>
+                                <p>Time: 10.25 PM</p>
+                            </div>
+                            <p class="color-primay">Not until the creation and maintenance of decent conditions of life
+                                for all people are
+                                recognized and accepted as a common obligation of all people and all countries—not until
+                                then shall we,
+                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <button class="news-btn">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
