--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="donate-to-day-container">
+                <h1>Donate Today</h1>
+                <p>Bangladesh 2.0 aims to redefine the nations trajectory by embracing cutting-edge technology,
+                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
+                    digital transformation, and robust infrastructure.</p>
+                <div>
+                    <button class="taka-donet">100 Taka</button>
+                    <button class="taka-donet" id="taka-bg-color">200 Taka</button>
+                    <button class="taka-donet">500 Taka</button>
+                    <button class="taka-donet">1000 Taka</button>
+                </div>
+                <div class="donet-input-con">
+                    <input type="text" name="" id="" placeholder="Other Amount Taka">
+                </div>
+
+                <button class="news-btn">Donate Now</button>
+            </div>
+        </section>
     </main>
 
 </body>
