add Dr Yunus sectoin

--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
         </section>
 
         <section>
+            <div class="yunus-container">
+                <p class="color-primay">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus
+                    labore sequi quos
+                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
+                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
+                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
+                    tenetur rem earum eaque mollitia modi ipsum aspernatur,
+                    dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <h3>Dr. Muhammad Yunus</h3>
+                <p class="color-primay" id="younus-designation">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
+
+        <section>
             <div class="recent-news-container">
                 <div class="recent-news-info">
                     <h2 class="title">Recent News</h2>
@@ -125,8 +139,9 @@
 
         <section>
             <div class="donate-to-day-container">
-                <h1>Donate Today</h1>
-                <p>Bangladesh 2.0 aims to redefine the nations trajectory by embracing cutting-edge technology,
+                <h1 class="title">Donate Today</h1>
+                <p class="color-primay">Bangladesh 2.0 aims to redefine the nations trajectory by embracing cutting-edge
+                    technology,
                     promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
                     digital transformation, and robust infrastructure.</p>
                 <div>
@@ -140,6 +155,19 @@
                 </div>
 
                 <button class="news-btn">Donate Now</button>
+            </div>
+        </section>
+
+        <section>
+            <div class="subscribe-letter">
+                <h1 class="title">Subscribe Newsletter</h1>
+                <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge <br> technology,
+                    promoting
+                    inclusive growth.</p>
+                <input placeholder="Enter Your Email Here" type="email">
+                <button>Subscribe</button>
+                <p>We promise not to spam you!</p>
             </div>
         </section>
     </main>
