--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
             <div class="banner-container">
                 <div class="banner-info">
                     <h4>Bangladesh 2.0</h4>
-                    <h1>Idea , innovation ,<br>
-                        vision and challenges <br> in New Bangladesh.</h1>
+                    <h1>creativity, ambitions, <br> and hurdles in building the <br> future of
+                        Bangladesh.
+                    </h1>
                     <button class="btn-primary">Explorer New Bangladesh</button>
                 </div>
                 <img src="images/assets/hero.png" alt="" srcset="">
@@ -27,11 +28,10 @@
             <div class="vission-future-container">
                 <div class="vission-future-info">
                     <h2 class="title">The Vision of Future</h2>
-                    <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                        cutting-edge technology,
-                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
-                        digital transformation, and robust infrastructure,
-                        the country is set to become a global model of development.</p>
+                    <p class="color-primay">The vision for the future of a New Bangladesh is to foster innovation,
+                        sustainability, and progress through technological advancements, economic growth, and social
+                        development. It aims to build a prosperous, inclusive, and resilient nation with a focus on
+                        green energy, digital transformation, and improving the quality of life for all citizens.</p>
                 </div>
                 <div class="vission-future-card">
                     <div class="card-container">
@@ -46,20 +46,16 @@
                         </div>
                         <div class="card c2">
                             <img src="images/assets/cardicon.png" alt="" srcset="">
-                            <h4>Digital Transformation</h4>
-                            <p class="color-primay">Creating a nationwide digital ecosystem to enhance connectivity and
-                                access
-                                to services for
-                                all citizens.</p>
+                            <h4>Green Energy</h4>
+                            <p class="color-primay">Green energy refers to energy derived from renewable and
+                                environmentally friendly sources </p>
                             <button>Learn More</button>
                         </div>
                         <div class="card c3">
                             <img src="images/assets/cardicon.png" alt="" srcset="">
-                            <h4>Digital Transformation</h4>
-                            <p class="color-primay">Creating a nationwide digital ecosystem to enhance connectivity and
-                                access
-                                to services for
-                                all citizens.</p>
+                            <h4>Modern Infrastructure</h4>
+                            <p class="color-primay">Modern infrastructure refers to the advanced systems, facilities,
+                                to support the efficient functioning of a society.</p>
                             <button>Learn More</button>
                         </div>
                     </div>
@@ -69,13 +65,12 @@
 
         <section>
             <div class="yunus-container">
-                <p class="color-primay">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus
-                    labore sequi quos
-                    deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis
-                    culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit,
-                    dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam
-                    tenetur rem earum eaque mollitia modi ipsum aspernatur,
-                    dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+                <p class="color-primay">"Today is a glorious day for us.Bangladesh has created a new victory day.
+                    Bangladesh
+                    has got a second independence.I congratulate the brave students who took the lead in making our
+                    Second Victory Day possible and to the people for giving your total support to them. Let us make the
+                    best use of our new victory.
+                    Let us not let this slip away because of our mistakes."</p>
                 <h3>Dr. Muhammad Yunus</h3>
                 <p class="color-primay" id="younus-designation">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
@@ -85,11 +80,10 @@
             <div class="recent-news-container">
                 <div class="recent-news-info">
                     <h2 class="title">Recent News</h2>
-                    <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                        cutting-edge technology,
-                        promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
-                        digital transformation, and robust infrastructure,
-                        the country is set to become a global model of development.</p>
+                    <p class="color-primay">New Bangladesh represents a future of transformation, driven by innovation,
+                        sustainability, and inclusivity. Its a vision where the nation harnesses the potential of
+                        modern technologies and embraces forward-thinking strategies to create a thriving, resilient,
+                        and prosperous society for all.</p>
 
                 </div>
                 <div class="recent-news-card-container">
@@ -104,11 +98,10 @@
                                 <p>Date: 05/01/25</p>
                                 <p>Time: 10.25 PM</p>
                             </div>
-                            <p class="color-primay">Not until the creation and maintenance of decent conditions of life
-                                for all people are
-                                recognized and accepted as a common obligation of all people and all countries—not until
-                                then shall we,
-                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <p class="color-primay"> Bangladesh is actively advancing its space capabilities with plans
+                                to launch a second satellite, the Bangladesh Earth Observatory Satellite, within the
+                                next two to three years. This satellite aims to enhance the country's ability to monitor
+                                natural disasters, manage agricultural resources, and assess environmental changes</p>
                             <button class="news-btn">Read More</button>
                         </div>
                     </div>
@@ -125,11 +118,12 @@
                                 <p>Date: 05/01/25</p>
                                 <p>Time: 10.25 PM</p>
                             </div>
-                            <p class="color-primay">Not until the creation and maintenance of decent conditions of life
-                                for all people are
-                                recognized and accepted as a common obligation of all people and all countries—not until
-                                then shall we,
-                                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                            <p class="color-primay">The initiative follows the successful deployment of Bangladeshs
+                                first geostationary communications and broadcasting satellite, Bangabandhu-1, which was
+                                launched on May 12, 2018, from the Kennedy Space Center in the USA. Manufactured by
+                                Thales Alenia Space, Bangabandhu-1 marked Bangladesh's entry as the 57th country to
+                                independently operate a satellite in space.
+                            </p>
                             <button class="news-btn">Read More</button>
                         </div>
                     </div>
@@ -140,10 +134,8 @@
         <section>
             <div class="donate-to-day-container">
                 <h1 class="title">Donate Today</h1>
-                <p class="color-primay">Bangladesh 2.0 aims to redefine the nations trajectory by embracing cutting-edge
-                    technology,
-                    promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
-                    digital transformation, and robust infrastructure.</p>
+                <p class="color-primay">If youre referring to contributions toward the development of a modern and
+                    prosperous Bangladesh, heres how this idea could align with nation-building efforts:</p>
                 <div>
                     <button class="taka-donet">100 Taka</button>
                     <button class="taka-donet" id="taka-bg-color">200 Taka</button>
@@ -161,8 +153,8 @@
         <section>
             <div class="subscribe-letter">
                 <h1 class="title">Subscribe Newsletter</h1>
-                <p class="color-primay">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-                    cutting-edge <br> technology,
+                <p class="color-primay">Stay updated with the latest news and insights! Subscribe now for exclusive
+                    updates delivered directly <br> technology,
                     promoting
                     inclusive growth.</p>
                 <input placeholder="Enter Your Email Here" type="email">
